--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -17,7 +17,7 @@ nav {
     justify-content: space-between;
     margin: 0px 200px;
 }
-.navtitle{
+.nav-title{
     font-weight: 800;
     font-size: 45px;
 }
@@ -59,6 +59,9 @@ a{
     font-weight: 20px;
 }
 
+.text-center{
+    text-align: center;
+}
 /*banner-styles*/
 
 
@@ -98,4 +101,77 @@ background-position: top left, bottom right;
 .secondary-background{
     background-color: #FFF8F3;
 
+}
+/*Section part*/
+.about{
+    border-radius: 10px;
+    padding: 130px 150px;
+    text-align: center;
+
+}
+.dark-3{
+    color: #757575;
+}
+.section-title{
+    font-size: 35px;
+    font-weight: bold;
+    color: black;    
+
+}
+.section-description{
+    font-size: 18px;   
+
+}
+.about-item{
+    display: flex;
+    justify-content: space-around;
+
+
+}
+.item-title{
+
+}
+.item-description{
+    font-weight: 600;
+
+}
+/*skills*/
+.skill-container{
+    display: flex;
+    gap: 24px;
+}
+.skill{
+    padding: 30px;
+    box-shadow: 0px 6px 50px 0px rgba(0, 0, 0, 0.06);
+    border-radius: 5px;
+ }
+.main-section{
+    margin-top: 130px;
+    margin-bottom: 130px;
+}
+
+
+/*summary resume*/
+.resume-container{
+   
+   
+}
+.resume-hr{
+    margin: 30px 5px;
+}
+.resume-column{
+   
+}
+.resume-column-title
+.experience-title
+.experience-subtitle{
+    font-size: 20px;
+    font-weight: 600;
+    margin: 20px;
+}
+.experience-description{
+    color: #757575;
+}
+.resume-download-container{
+    margin-top: 50px;
 }
